fixing whitespace

--- a/resume.css
+++ b/resume.css
@@ -107,7 +107,7 @@ a:hover {
 
 #formatted-skills > p
 {
-
+padding :0;
 }
 
 
